# my_model_deployment_project

./: .gitignore  ML_PIPELINES_README.md  README.md  databricks.yml  pyproject.toml
.github/actions/deploy/: action.yml
.github/actions/run/: action.yml
.github/workflows/: bundle-cd-dev.yml  bundle-cd-prod.yml  bundle-cd-qa.yml
resources/: ml_pipeline.yml
src/ml_pipeline/: deploy_serve.py  serving_utils.py  train.py
